--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.5",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
